implementation pack 2